WeltradeSearchByArticlesLegalInformation.story bild_01

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,6 +1,6 @@
 serenity.project.name=Serenity Rest API Test Automation Framework
 serenity.test.root=/src/test/resources/stories
-webdriver.driver=firefox
+webdriver.driver=chrome
 webdriver.timeouts.implicitlywait=10000
 serenity.timeout=30000
 serenity.take.screenshots=FOR_FAILURES
